# zip-partial-loader

./: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.lszl.js  webpack.config.lszlw.js
scripts/: generate-test-epub.js
src/: error.test.ts  resolver.test.ts
src/lszl/: lszl.ts  worker-wrapper.ts
src/lszlw/: downloader.test.ts  downloader.ts  lszlw.ts  lszr-wrapper.ts
src/test/: setup.ts
src/util/: abort.test.ts  bytes.test.ts  bytes.ts  idb.test.ts
static/: benchmark.html  index.ts  test-500-entries.epub
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs  utils.rs  zip.rs
