[package]
name = "lszr"
version = "0.1.0"
authors = ["ryokik <ryokik@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.108"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3"
podio = "0.2"
encoding_rs = "0.8"
libflate = "2.1"
thiserror = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
